Fix Android hyphenation when input text has leading spaces

When the input text to the Hyphenation class has leading spaces,
OS X Core Foundation implementation (HyphenationCF) handles
such inputs, while Android implementation (HyphenationMinikin)
consider there is no hyphenation points in such a word.

This patch fixes the Android implementation to handle leading
spaces in a word given from the line breaker.

Bug: 813414
Change-Id: I4fc103809c5f1b1083300b261a675348ceccf2f0
Reviewed-on: https://chromium-review.googlesource.com/927931
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Dominik Röttsches <drott@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538124}
Former-commit-id: 33a8e5aeb9d2119a77363bcd2e025ae0efe6665e